update banner 0.0.6