@@ -11,34 +11,31 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class BannerService {
 
+    private static final String ACTIVE = "활성";
+    private static final String INACTIVE = "비활성";
+
     private final BannerRepository bannerRepository;
-    private final S3Uploader s3Uploader; // S3 업로더 추가
+    private final S3Uploader s3Uploader;
 
     public List<BannerDTO> getAllBanners() {
         return bannerRepository.findAll().stream()
                 .map(Banner::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public void registerBanner(BannerDTO dto, MultipartFile file) throws IOException {
         if (file != null && !file.isEmpty()) {
             dto.setFileUrl(file.getOriginalFilename());
-
-            // 로컬 폴더 대신 S3의 'banners' 폴더에 업로드
-            String storedFileUrl = s3Uploader.upload(file, "banners");
-
-            // DTO에 파일 이름이 아닌 S3 전체 URL을 저장
-            dto.setFileUrl_stored(storedFileUrl);
+            dto.setFileUrl_stored(s3Uploader.upload(file, "banners"));
         }
 
-        dto.setStatus("비활성");
+        dto.setStatus(INACTIVE);
         bannerRepository.save(dto.toEntity());
     }
 
@@ -47,7 +44,7 @@ public class BannerService {
         Banner banner = bannerRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("배너를 찾을 수 없습니다."));
 
-        String newStatus = banner.getStatus().equals("활성") ? "비활성" : "활성";
+        String newStatus = ACTIVE.equals(banner.getStatus()) ? INACTIVE : ACTIVE;
         banner.updateStatus(newStatus);
     }
 
@@ -56,7 +53,6 @@ public class BannerService {
         for (Long id : bannerIds) {
             bannerRepository.findById(id).ifPresent(banner -> {
                 if (banner.getFileUrl_stored() != null) {
-                    // S3에서도 실제 파일 삭제
                     s3Uploader.deleteFile(banner.getFileUrl_stored());
                 }
             });
